k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: web
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
